2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_copy): Rename ADDRESS_SPACE argument to
	TARGET_ADDRESS_SPACE.  Take additional argument
	SOURCE_ADDRESS_SPACE.  Update users.
	(cap_copy_x): Likewise.
	(cap_copy): Likewise.
	(object_slot_copy_out): Rename ADDRESS_SPACE argument to
	OBJECT_ADDRESS_SPACE.  Take additional argument
	TARGET_ADDRESS_SPACE.  Update users.
	(object_slot_copy_out): Rename ADDRESS_SPACE argument to
	OBJECT_ADDRESS_SPACE.  Take additional argument
	SOURCE_ADDRESS_SPACE.  Update users.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* cap.h (cap_copy): Take additional argument ADDRESS_SPACE.
	Update users.
	(cap_read): Likewise.
	(object_slot_copy_out): Likewise.
	(object_slot_copy_in): Likewise.
	(object_slot_read): Likewise.
	(cap_copy_x): Likewise.
	(cap_copy): Likewise.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* lock.h (ss_lock_trace_dump): Use S_PRINTF rather than printf.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* stddef.h (S_PRINTF): New macro.
	(debug): Use S_PRINTF rather than printf.
	* Makefile.am (t_addr_CPPFLAGS): Add -DS_PRINTF=printf.
	(t_addr_trans_CPPFLAGS): Likewise.
	(t_rpc_CPPFLAGS): Likewise.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* mutex.h (ss_mutex_unlock): Correctly test whether there are
	waiters.
	* rmutex.h (ss_rmutex_lock): Save the value of LOCKP->COUNT before
	unlocking the LOCKP->LOCK.  After unlocking, use the cached value.
	(ss_rmutex_unlock): Improve assert.  Only clear LOCKP->OWNER and
	wake a waiter if LOCKP->COUNT drops to 0.
	(ss_rmutex_trylock): Correctly test whether we got LOCKP->LOCK.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* rmutex.h (ss_rmutex_lock): Don't use __lock_acquire or
	__lock_release to lock or unlock LOCKP->LOCK, but ss_mutex_lock
	and ss_mutex_unlock.
	(ss_rmutex_unlock): Likewise.
	(ss_rmutex_trylock): Don't use __lock_try_acquire to try and
	obtain LOCKP->LOCK but ss_mutex_trylock.

2008-01-22  Neal H. Walfield  <neal@gnu.org>
